Tweak some styles

--- a/root/vcursor/css/ui.css
+++ b/root/vcursor/css/ui.css
@@ -1,10 +1,10 @@
 .vcursor {
-    height: 16px;
-    width: 16px;
+    height: 20px;
+    width: 20px;
     z-index: 9999999;
     position: absolute;
     left: 0;
     top: 0;
-    background: url(/vcursor/img/cursor.png) center center no-repeat;
+    background: url(/vcursor/img/cursor.png) bottom right no-repeat;
     display: block;
 }
